[package]
name = "diff_derive"
description = "A derive macro for implementing Diff on the diff-struct crate"
version = "0.2.1"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
repository = "https://github.com/BenHall-7/diff-derive"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "parsing" ] }
proc-macro2 = "1"
quote = "1"
